[workspace]
resolver = "2"

members = [
  "modules/*",
  #"crates/*",

  "api/axfeat",
  "api/arceos_api",
  "api/arceos_posix_api",

  "ulib/axstd",
  "ulib/axlibc",

  "examples/helloworld",
  "examples/httpclient",
  "examples/httpserver",
  "examples/httpserver",
  "examples/shell",
  "examples/TCP_test",
  "ulib/axmono",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/arceos"
repository = "https://github.com/arceos-org/arceos"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
axstd = { path = "ulib/axstd" }
axlibc = { path = "ulib/axlibc" }
axmono = { path = "ulib/axmono" }
arceos_api = { path = "api/arceos_api" }
arceos_posix_api = { path = "api/arceos_posix_api" }
axfeat = { path = "api/axfeat" }

axalloc = { path = "modules/axalloc" }
axconfig = { path = "modules/axconfig" }
axdisplay = { path = "modules/axdisplay" }
axdriver = { path = "modules/axdriver" }
axfs = { path = "modules/axfs" ,features = ["lwext4_rs"]}
axhal = { path = "modules/axhal",features = ["uspace"] }
axlog = { path = "modules/axlog" }
axmm = { path = "modules/axmm",features = ["mmap","heap","COW"] }
axnet = { path = "modules/axnet" }
axns = { path = "modules/axns" }
axruntime = { path = "modules/axruntime" }
axsync = { path = "modules/axsync" }
axtask = { path = "modules/axtask" }
axdma = { path = "modules/axdma" }
axsyscall = { path = "modules/axsyscall" }
acbat = { path = "modules/acbat" }

syscalls = { git = "https://github.com/jasonwhite/syscalls.git", default-features = false, features = [
  "loongarch64",
  "riscv64",
] }

memory_set = { path = "./crates/axmm_crates/memory_set" ,features = ["RAII"]}
memory_addr = { path = "./crates/axmm_crates/memory_addr" }
page_table_multiarch = { path = "./crates/page_table_multiarch/page_table_multiarch" }
page_table_entry = { path = "./crates/page_table_multiarch/page_table_entry" }
axfs_vfs = {path = "./crates/axfs_crates/axfs_vfs" }
axfs_devfs = {path = "./crates/axfs_crates/axfs_devfs"}
axfs_ramfs = {path ="./crates/axfs_crates/axfs_ramfs"}
bitflags = "2.9.0"
linkme = "0.3.32"


[patch.crates-io]
memory_addr = { version = "0.3.2", path = "./crates/axmm_crates/memory_addr" }
page_table_multiarch = {version = "0.5", path = "./crates/page_table_multiarch/page_table_multiarch"}
page_table_entry = {version = "0.5.4", path = "./crates/page_table_multiarch/page_table_entry"}

#[patch.crates-io]
#page_table_multiarch = { git = "https://github.com/oscomp/page_table_multiarch.git", rev = "c8a13b0"}
#page_table_entry = { git = "https://github.com/oscomp/page_table_multiarch.git", rev = "c8a13b0" }

[profile.release]
lto = true

#[patch.crates-io]
#page_table_multiarch = { git = "https://github.com/Mivik/page_table_multiarch.git", rev = "19ededd" }
#page_table_entry = { git = "https://github.com/Mivik/page_table_multiarch.git", rev = "19ededd" }

[patch.crates-io]
page_table_multiarch = { path = "./crates/page_table_multiarch/page_table_multiarch" }
page_table_entry = { path = "./crates/page_table_multiarch/page_table_entry" }
axfs_vfs = {path = "./crates/axfs_crates/axfs_vfs" }
axfs_devfs = {path = "./crates/axfs_crates/axfs_devfs"}
axfs_ramfs = {path ="./crates/axfs_crates/axfs_ramfs"}
lwext4_rust ={path ="./crates/lwext4_rust"}

