[package]
name = "testcase"
version = "0.1.0"
edition = "2024"

[workspace]
[features]
[dependencies]
axstd = { path = "../../ulib/axstd", features = ["paging"]}
axhal = { path = "../../modules/axhal", features = ["uspace"]}
axerrno = "0.1"
axfs = { path = "../../modules/axfs"}
axtask = { path = "../../modules/axtask"}
axruntime = { path = "../../modules/axruntime", features = ["multitask"]}
axsyscall = { path = "../../modules/axsyscall"}
arceos_posix_api = { path = "../../api/arceos_posix_api", features = ["uspace","fd"] }
axlog = { path = "../../modules/axlog"}
axns = { path = "../../modules/axns", features = ["thread-local"]}
axsync = { path = "../../modules/axsync"}
axalloc = { path = "../../modules/axalloc"}
axmm = { path = "../../modules/axmm"}
xmas-elf = "0.9.1"
kernel-elf-parser = "0.3.2"
linkme = "0.3.32"
bitflags = "2.9.0"
numeric-enum-macro = { git = "https://github.com/mexus/numeric-enum-macro" }
num_enum = {version = "0.7.3",default-features = false }
syscalls = {version = "0.6.18",default-features = false }
crate_interface = "0.1.4"
memory_addr = "0.3.2"
[build-dependencies]
acbat = { path = "../../libs/acbat"}
toml_edit = "0.22.24"

[patch.crates-io]
page_table_multiarch = { git = "https://github.com/Mivik/page_table_multiarch.git", rev = "19ededd" }
page_table_entry = { git = "https://github.com/Mivik/page_table_multiarch.git", rev = "19ededd" }
