[package]
name = "arceos-tcptest"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { workspace = true, features = ["net"], optional = true }

[features]
default = []
dns = ["axstd?/dns"]
