[package]
name = "acbat"
version = "0.1.0"
description = "A simple command-line tool for managing and analyzing astronomical data"
authors = ["Xichen Zeng <zeexoc@outlook.com>"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pico-args = "0.5.0"
