[package]
name = "axmm"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS virtual memory management module"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axmm"
documentation = "https://arceos-org.github.io/arceos/axmm/index.html"

[features]
RAII = ["memory_set/RAII", "memory_addr/RAII"]
COW = ["RAII"]
heap = []

[dependencies]
axhal = { workspace = true, features = ["paging"] }
axalloc = { workspace = true }
axconfig = { workspace = true }

log = "=0.4.21"
axerrno = "0.1"
lazyinit = "0.2"
memory_addr = { workspace = true }
memory_set = { workspace = true }
kspin = "0.1"
page_table_multiarch = "0.5"
