[package]
name = "axsignal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syscalls = { workspace = true }
linux-raw-sys = { version = "0.9.4", default-features = false, features = [
    "no_std",
    "general",
    "net",
    "prctl",
    "system",
] }
memory_addr = "0.3.2"
bitflags = "2.9.0"
axlog = { workspace = true }
axhal = { workspace = true }
axerrno = "0.1"
#linux-raw-sys = { workspace = true }
