[package]
name = "axsyscall"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
[features]
fs = ["arceos_posix_api/fs"]
fd = ["arceos_posix_api/fd"]
net = ["arceos_posix_api/net"]
pipe = ["arceos_posix_api/pipe"]
multitask = ["arceos_posix_api/multitask"]
[dependencies]
syscalls = { workspace = true }
arceos_posix_api = { workspace = true }
axerrno = "0.1"
axtask = {workspace = true}
axconfig = {workspace = true}
axmono = {workspace = true}
axlog = {workspace = true}