[package]
name = "axmono"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["process", "mm", "syscalls", "mmap", "heap"]
process = ["axns", "axtask", "axfeat/multitask"]
mm = ["axmm"]
COW = ["axmm/COW", "page_table_entry/COW"]
irq = ["axfeat/irq", "axtask?/sched_rr"]
syscalls = ["dep:syscalls"]
heap = ["axmm/heap"]
mmap = ["axmm/mmap"]
sig = []
[dependencies]
page_table_entry = { workspace = true }
page_table_multiarch = { workspace = true }
axfeat = { workspace = true, features = ["tls"]}
axconfig = { workspace = true }
axhal = { workspace = true }
axlog = { workspace = true }
arceos_posix_api = { workspace = true, features = ["uspace"] }
axfs = { workspace = true }
axmm = { workspace = true, optional = true }
axtask = { workspace = true, optional = true }
axsync = { workspace = true }
axns = { workspace = true, optional = true }
axsyscall = { workspace = true, features = [
  "fd",
  "fs",
  "pipe",
  "multitask",
] }

axerrno = "0.1"
memory_addr = "0.3.2"
bitflags = "2.9.0"
crate_interface = "0.1.4"
xmas-elf = "0.9.1"
kernel-elf-parser = "0.3.2"
linkme = "0.3.32"
numeric-enum-macro = { git = "https://github.com/mexus/numeric-enum-macro" }
syscalls = { workspace = true, optional = true }
